# Asset-Install

./: .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/asset_install/: __init__.py  app.py  cli.py  downloader.py  extractor.py  history.py  manifest.py  menus.py  paths.py  validator.py  versions.py  versions.txt
src/asset_install.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_downloader.py  test_extractor.py  test_history.py  test_manifest.py  test_paths.py  test_validator.py  test_versions.py
